replace java21 only method